--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cloudinary": "^2.7.0",
+    "lucide-react": "^0.536.0",
     "mapbox-gl": "^3.13.0",
     "maplibre-gl": "^5.6.1",
     "mongodb": "^6.17.0",
